<resources>
    <string name="app_name">MyDairyFarm</string>

    <string name="email_hint">E-Mail</string>
    <string name="password_hint">Password</string>
    <string name="login">Log In</string>
    <string name="name">Farmer Name</string>
    <string name="farmname">Farm Name</string>
    <string name="phonenumber">Phone Number</string>
    <string name="farmrecordstext">Daily Farm Records</string>
    <string name="signuplink">"No account yet? Create one"</string>
    <string name="loginlink">"Already have an account? Log In"</string>
    <string name="forgotpasswordlink">"Forgot Password?"</string>
    <string name="createaccount">Register</string>
    <string name="createaccountbtn">Create Account</string>
    <string name="verifybill">VERIFY BILL</string>
    <string name="enterbillnumber">Enter Bill Number</string>
    <string name="billnumber">Bill Number</string>
    <string name="entermonth">Enter Month</string>
    <string name="enteryear">Enter Year</string>
    <string name="verify">Check Bill Status</string>

    <string name="reset">Reset Password</string>
    <string name="change">reset</string>
    <string name="password">Current Password</string>
    <string name="oldpassword_hint">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="amount">Amount</string>
    <string name="status">Status</string>
    <string name="narration">Narration</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="action_settings">Settings</string>
</resources>
